--- a/boarder/boarder-css/cb.css
+++ b/boarder/boarder-css/cb.css
@@ -1,3 +1,51 @@
+/* body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-image: url('../../images/booking_system.jpg'); 
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    letter-spacing: 1px;
+    overflow: hidden;
+}
+
+.navbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.6);
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(60px);
+    border: 1px solid rgba(255,255,255,0.15);
+    align-items: center;
+    box-shadow: 5px 5px;
+}
+
+.logo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 40px;
+    align-items: center;
+    text-align: center;
+}
+
+.navbar a {
+    font-weight: 600;
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.navbar a:hover {
+    text-decoration: none;
+} */
+
 .dashboard-container {
     display: flex;
     justify-content: center;
@@ -26,25 +74,6 @@
     max-height: calc(100vh - 160px);
     overflow-y: auto;
     overflow-x: hidden;
-}
-
-.pagination-container {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 15px;
-    display: none;
-}
-
-.pagination-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .btns {
